welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if (estAdo(a)) {
                  ^loneTeen:9: error: value unary_! is not a member of Unit
		if (!estAdo(b)) {
                    ^loneTeen:13: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (estAdo(b)) {
                       ^loneTeen:14: error: value unary_! is not a member of Unit
		if (!estAdo(a)) {
                    ^